# haskell-microtype

./: README.md  beginning.cabal  haskell-microtype.cabal  queries.sql  stack.yaml
app/: Central.hs  Confirm.hs  Final.hs  Mid.hs  Start.hs  Trigger.hs
beginning/: Example-Return.hs  beginning.cabal
beginning/app/: Final.hs  Mid.hs  Start.hs
beginning/src/: Http.hs  StartDb.hs
middle/: middle.cabal
middle/src/: DataTypes.hs  Http.hs  Main.hs
src/: Helpers.hs  Http.hs  MidDB.hs  MidDataTypes.hs  MidServer.hs  StartDataTypes.hs  StartDb.hs  StartServer.hs
src/Confirmation/: DataTypes.hs  Db.hs  Server.hs
src/DataProcess/: DataTypes.hs  Db.hs  Server.hs
src/Shared/: Helpers.hs  Http.hs
src/Unpack/: Core.hs  DataTypes.hs  Db.hs
terminal/: terminal.cabal
