name:                haskell-microtype
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-microtype#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-microtype
  hs-source-dirs:      src
  main-is:             StartServer.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mysql
                     , mysql-simple
                     , http-conduit
                     , scotty
                     , bytestring
                     , zlib
                     , unix-time
                     , time
                     , uuid
                     , parallel-io
                     , async
